# bestprice_limit_order_rust_python_binance

./: .gitignore  README.md  ddown.sh  dup.sh  format.sh
cli/trader-cli/: Cargo.toml
cli/trader-cli/src/: lib.rs  main.rs
cli/trader-cli/src/position/: mod.rs
cli/trader-cli/src/subscriber/: mod.rs
cli/trader-cli/src/trader/: mod.rs
cli/trader-cli/src/utils/: mod.rs
docker/Dockerfiles/: black.Dockerfile  django.Dockerfile  prettier.Dockerfile  rustfmt.Dockerfile
docker/compose_files/: main.yml
docker/compose_files/utils/: format.yml
docker/envs/: .enums  .env_example
main/: .gitignore  manage.py  requirements.txt
main/main/: apps.py  models.py
main/main/migrations/: 0001_initial.py
main/main/tests/: __init__.py  test_traders.py
main/rust_trader_test/: asgi.py  settings.py  urls.py  wsgi.py
