[package]
name = "trader-cli"
version = "0.1.0"
edition = "2021"


[lib]
name = "rust_trader"
path = "src/lib.rs"
crate-type = ["cdylib"]


[dependencies]
binance = { git = "https://github.com/wisespace-io/binance-rs.git" }
clap = { version = "4.5.16", features = ["derive"] }
serde = { version = "1.0.209", features = ["serde_derive"] }
serde_json = "1.0.127"
tokio = {version = "1.29.1", features = ["full"]}
url = "2.5.2"
tungstenite = { version = "0.21.0", features = ["native-tls"] }
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
pyo3 = { version = "0.22.2", features = ["extension-module"] }
futures-util = "0.3.28"
uuid = {version = "1.6.1", features = ["v4"]}

[features]
vendored-tls = [
  "reqwest/native-tls-vendored",
  "tungstenite/native-tls-vendored",
]

